@@ -224,6 +224,7 @@ namespace RIFF {
             Chunk*       AddSubChunk(uint32_t uiChunkID, uint uiBodySize);
             List*        AddSubList(uint32_t uiListType);
             void         DeleteSubChunk(Chunk* pSubChunk);
+            void         MoveSubChunk(Chunk* pSrc, Chunk* pDst);
             virtual ~List();
         protected:
             typedef std::map<uint32_t, RIFF::Chunk*>  ChunkMap;
